--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aed9f0">  <td>20/10/02 21:49:24</td>   <td>0</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:Selenium.OsintMon.Constaints@233fe9b6]">&gt;&gt;SetUrl</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@536765369</td>   <td></td> </tr>
-<tr bgcolor="aed9f0">  <td>20/10/02 21:49:40</td>   <td>16369</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:Selenium.OsintMon.Constaints@233fe9b6]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@536765369</td>   <td></td> </tr>
-<tr bgcolor="aed9f0">  <td>20/10/02 21:49:40</td>   <td>16363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:osintMonTestCases.VerifyTitle@358ee631]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@536765369</td>   <td></td> </tr>
-<tr bgcolor="aed9f0">  <td>20/10/02 21:49:41</td>   <td>16798</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:Selenium.OsintMon.Constaints@233fe9b6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@536765369</td>   <td></td> </tr>
-<tr bgcolor="af787b">  <td>20/10/02 21:49:40</td>   <td>16338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle@358ee631]">verifyPageTitle</td> 
-  <td>main@536765369</td>   <td></td> </tr>
+<tr bgcolor="a3ffec">  <td>20/10/03 00:37:56</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;InvalidLogin.Login()[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&gt;&gt;Login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
+<tr bgcolor="a3ffec">  <td>20/10/03 00:37:57</td>   <td>140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:invalidTestCases.InvalidLogin@78c03f1f]">NoCredentials</td> 
+  <td>main@1427810650</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>20/10/03 00:37:42</td>   <td>-14622</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&gt;&gt;SetUrl</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>20/10/03 00:38:05</td>   <td>8738</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>20/10/03 00:38:05</td>   <td>8119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>20/10/03 00:38:06</td>   <td>9265</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
 </table>
