--- a/test-output/old/OsintMon Suite/methods-alphabetical.html
+++ b/test-output/old/OsintMon Suite/methods-alphabetical.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>OsintMon Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c682b1">  <td>20/10/02 14:12:49</td>   <td>0</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:osintMonTestCases.VerifyTitle$Title@49993335]">&gt;&gt;SetUrl</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="be92ad">  <td>20/10/02 14:12:55</td>   <td>6208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle$Title.verifyHomePage()[pri:0, instance:osintMonTestCases.VerifyTitle$Title@49993335]">verifyHomePage</td> 
-  <td>main@1335298403</td>   <td></td> </tr>
-<tr bgcolor="be92ad">  <td>20/10/02 14:12:55</td>   <td>6233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle$Title.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle$Title@49993335]">verifyPageTitle</td> 
-  <td>main@1335298403</td>   <td></td> </tr>
+<tr bgcolor="907bac">  <td>20/10/03 22:58:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.InvalidCredentials()[pri:2, instance:invalidTestCases.InvalidLogin@65e2dbf3]">InvalidCredentials</td> 
+  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="907bac">  <td>20/10/03 22:58:34</td>   <td>-5678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:invalidTestCases.InvalidLogin@65e2dbf3]">NoCredentials</td> 
+  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="e269a8">  <td>20/10/03 22:58:06</td>   <td>-33754</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&gt;&gt;SetUrl</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="e269a8">  <td>20/10/03 22:58:33</td>   <td>-6199</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:osintMonTestCases.VerifyTitle@52a86356]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="e269a8">  <td>20/10/03 22:58:44</td>   <td>4326</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="e269a8">  <td>20/10/03 22:58:33</td>   <td>-6210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:osintMonTestCases.VerifyTitle@52a86356]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="e269a8">  <td>20/10/03 22:58:39</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="e269a8">  <td>20/10/03 22:58:44</td>   <td>4326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="e269a8">  <td>20/10/03 22:58:44</td>   <td>4370</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="caeb9e">  <td>20/10/03 22:58:33</td>   <td>-6241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle@52a86356]">verifyPageTitle</td> 
+  <td>main@1663166483</td>   <td></td> </tr>
 </table>
